Cpp_C_Compiler/src/parser.output
Terminals unused in grammar

    MOD
    AND
    OR
    NOT
    PRINT
    READ


Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function_list function
    3              | function

    4 $@1: ε

    5 function: type ID LPAREN $@1 params RPAREN body

    6 params: formals type ID
    7       | ε

    8 formals: formals type ID COMMA
    9        | ε

   10 type: INT

   11 body: LBRACE decls stmts RBRACE

   12 decls: decl_list decl
   13      | ε

   14 decl_list: decl_list decl
   15          | ε

   16 decl: type ID vars SEMICOLON
   17     | type ID ASSIGN expression vars SEMICOLON

   18 vars: COMMA ID vars
   19     | COMMA ID ASSIGN expression vars
   20     | ε

   21 stmts: stmts stmt
   22      | ε

   23 stmt: assignment SEMICOLON
   24     | RETURN expression SEMICOLON
   25     | IF LPAREN expression RPAREN stmt ELSE stmt
   26     | WHILE LPAREN expression RPAREN stmt
   27     | BREAK SEMICOLON
   28     | block
   29     | SEMICOLON

   30 block: LBRACE stmts RBRACE

   31 assignment: location ASSIGN expression

   32 location: ID

   33 expression: add_expression relop add_expression
   34           | add_expression

   35 relop: LE
   36      | LT
   37      | GT
   38      | GE
   39      | EQ
   40      | NE

   41 add_expression: add_expression addop term
   42               | term

   43 addop: PLUS
   44      | MINUS

   45 term: term mulop unary
   46     | unary

   47 mulop: MUL
   48      | DIV

   49 unary: MINUS factor
   50      | PLUS factor
   51      | factor

   52 factor: LPAREN expression RPAREN
   53       | location
   54       | CONST_INT
   55       | TRUE
   56       | FALSE
   57       | ID LPAREN actuals RPAREN

   58 actuals: arg_list
   59        | ε

   60 arg_list: expression
   61         | expression COMMA arg_list


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PLUS <op> (258) 43 50
    MINUS <op> (259) 44 49
    MUL <op> (260) 47
    DIV <op> (261) 48
    MOD <op> (262)
    ASSIGN <op> (263) 17 19 31
    EQ <op> (264) 39
    NE <op> (265) 40
    GT <op> (266) 37
    GE <op> (267) 38
    LT <op> (268) 36
    LE <op> (269) 35
    AND <op> (270)
    OR <op> (271)
    NOT <op> (272)
    SEMICOLON (273) 16 17 23 24 27 29
    COMMA (274) 8 18 19 61
    LPAREN (275) 5 25 26 52 57
    RPAREN (276) 5 25 26 52 57
    LBRACE (277) 11 30
    RBRACE (278) 11 30
    IF (279) 25
    ELSE (280) 25
    PRINT (281)
    READ (282)
    WHILE (283) 26
    BREAK (284) 27
    RETURN (285) 24
    INT (286) 10
    TRUE <yint> (287) 55
    FALSE <yint> (288) 56
    CONST_INT <yint> (289) 54
    ID <ystr> (290) 5 6 8 16 17 18 19 32 57
    UPLUS (291)
    UMINUS (292)


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    program <yast> (39)
        on left: 1
        on right: 0
    function_list <yast> (40)
        on left: 2 3
        on right: 1 2
    function <yast> (41)
        on left: 5
        on right: 2 3
    $@1 (42)
        on left: 4
        on right: 5
    params <yvec> (43)
        on left: 6 7
        on right: 5
    formals <yvec> (44)
        on left: 8 9
        on right: 6 8
    type <yast> (45)
        on left: 10
        on right: 5 6 8 16 17
    body <yast> (46)
        on left: 11
        on right: 5
    decls <yast> (47)
        on left: 12 13
        on right: 11
    decl_list <yast> (48)
        on left: 14 15
        on right: 12 14
    decl <yast> (49)
        on left: 16 17
        on right: 12 14
    vars <yast> (50)
        on left: 18 19 20
        on right: 16 17 18 19
    stmts <yast> (51)
        on left: 21 22
        on right: 11 21 30
    stmt <yast> (52)
        on left: 23 24 25 26 27 28 29
        on right: 21 25 26
    block <yast> (53)
        on left: 30
        on right: 28
    assignment <yast> (54)
        on left: 31
        on right: 23
    location <yast> (55)
        on left: 32
        on right: 31 53
    expression <yast> (56)
        on left: 33 34
        on right: 17 19 24 25 26 31 52 60 61
    relop <op> (57)
        on left: 35 36 37 38 39 40
        on right: 33
    add_expression <yast> (58)
        on left: 41 42
        on right: 33 34 41
    addop <op> (59)
        on left: 43 44
        on right: 41
    term <yast> (60)
        on left: 45 46
        on right: 41 42 45
    mulop <op> (61)
        on left: 47 48
        on right: 45
    unary <yast> (62)
        on left: 49 50 51
        on right: 45 46
    factor <yast> (63)
        on left: 52 53 54 55 56 57
        on right: 49 50 51
    actuals <yvec> (64)
        on left: 58 59
        on right: 57
    arg_list <yvec> (65)
        on left: 60 61
        on right: 58 61


State 0

    0 $accept: • program $end

    INT  shift, and go to state 1

    program        go to state 2
    function_list  go to state 3
    function       go to state 4
    type           go to state 5


State 1

   10 type: INT •

    $default  reduce using rule 10 (type)


State 2

    0 $accept: program • $end

    $end  shift, and go to state 6


State 3

    1 program: function_list •
    2 function_list: function_list • function

    INT  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function  go to state 7
    type      go to state 5


State 4

    3 function_list: function •

    $default  reduce using rule 3 (function_list)


State 5

    5 function: type • ID LPAREN $@1 params RPAREN body

    ID  shift, and go to state 8


State 6

    0 $accept: program $end •

    $default  accept


State 7

    2 function_list: function_list function •

    $default  reduce using rule 2 (function_list)


State 8

    5 function: type ID • LPAREN $@1 params RPAREN body

    LPAREN  shift, and go to state 9


State 9

    5 function: type ID LPAREN • $@1 params RPAREN body

    $default  reduce using rule 4 ($@1)

    $@1  go to state 10


State 10

    5 function: type ID LPAREN $@1 • params RPAREN body

    INT       reduce using rule 9 (formals)
    $default  reduce using rule 7 (params)

    params   go to state 11
    formals  go to state 12


State 11

    5 function: type ID LPAREN $@1 params • RPAREN body

    RPAREN  shift, and go to state 13


State 12

    6 params: formals • type ID
    8 formals: formals • type ID COMMA

    INT  shift, and go to state 1

    type  go to state 14


State 13

    5 function: type ID LPAREN $@1 params RPAREN • body

    LBRACE  shift, and go to state 15

    body  go to state 16


State 14

    6 params: formals type • ID
    8 formals: formals type • ID COMMA

    ID  shift, and go to state 17


State 15

   11 body: LBRACE • decls stmts RBRACE

    INT       reduce using rule 15 (decl_list)
    $default  reduce using rule 13 (decls)

    decls      go to state 18
    decl_list  go to state 19


State 16

    5 function: type ID LPAREN $@1 params RPAREN body •

    $default  reduce using rule 5 (function)


State 17

    6 params: formals type ID •
    8 formals: formals type ID • COMMA

    COMMA  shift, and go to state 20

    $default  reduce using rule 6 (params)


State 18

   11 body: LBRACE decls • stmts RBRACE

    $default  reduce using rule 22 (stmts)

    stmts  go to state 21


State 19

   12 decls: decl_list • decl
   14 decl_list: decl_list • decl

    INT  shift, and go to state 1

    type  go to state 22
    decl  go to state 23


State 20

    8 formals: formals type ID COMMA •

    $default  reduce using rule 8 (formals)


State 21

   11 body: LBRACE decls stmts • RBRACE
   21 stmts: stmts • stmt

    SEMICOLON  shift, and go to state 24
    LBRACE     shift, and go to state 25
    RBRACE     shift, and go to state 26
    IF         shift, and go to state 27
    WHILE      shift, and go to state 28
    BREAK      shift, and go to state 29
    RETURN     shift, and go to state 30
    ID         shift, and go to state 31

    stmt        go to state 32
    block       go to state 33
    assignment  go to state 34
    location    go to state 35


State 22

   16 decl: type • ID vars SEMICOLON
   17     | type • ID ASSIGN expression vars SEMICOLON

    ID  shift, and go to state 36


State 23

   12 decls: decl_list decl •
   14 decl_list: decl_list decl •

    INT       reduce using rule 14 (decl_list)
    $default  reduce using rule 12 (decls)


State 24

   29 stmt: SEMICOLON •

    $default  reduce using rule 29 (stmt)


State 25

   30 block: LBRACE • stmts RBRACE

    $default  reduce using rule 22 (stmts)

    stmts  go to state 37


State 26

   11 body: LBRACE decls stmts RBRACE •

    $default  reduce using rule 11 (body)


State 27

   25 stmt: IF • LPAREN expression RPAREN stmt ELSE stmt

    LPAREN  shift, and go to state 38


State 28

   26 stmt: WHILE • LPAREN expression RPAREN stmt

    LPAREN  shift, and go to state 39


State 29

   27 stmt: BREAK • SEMICOLON

    SEMICOLON  shift, and go to state 40


State 30

   24 stmt: RETURN • expression SEMICOLON

    PLUS       shift, and go to state 41
    MINUS      shift, and go to state 42
    LPAREN     shift, and go to state 43
    TRUE       shift, and go to state 44
    FALSE      shift, and go to state 45
    CONST_INT  shift, and go to state 46
    ID         shift, and go to state 47

    location        go to state 48
    expression      go to state 49
    add_expression  go to state 50
    term            go to state 51
    unary           go to state 52
    factor          go to state 53


State 31

   32 location: ID •

    $default  reduce using rule 32 (location)


State 32

   21 stmts: stmts stmt •

    $default  reduce using rule 21 (stmts)


State 33

   28 stmt: block •

    $default  reduce using rule 28 (stmt)


State 34

   23 stmt: assignment • SEMICOLON

    SEMICOLON  shift, and go to state 54


State 35

   31 assignment: location • ASSIGN expression

    ASSIGN  shift, and go to state 55


State 36

   16 decl: type ID • vars SEMICOLON
   17     | type ID • ASSIGN expression vars SEMICOLON

    ASSIGN  shift, and go to state 56
    COMMA   shift, and go to state 57

    $default  reduce using rule 20 (vars)

    vars  go to state 58


State 37

   21 stmts: stmts • stmt
   30 block: LBRACE stmts • RBRACE

    SEMICOLON  shift, and go to state 24
    LBRACE     shift, and go to state 25
    RBRACE     shift, and go to state 59
    IF         shift, and go to state 27
    WHILE      shift, and go to state 28
    BREAK      shift, and go to state 29
    RETURN     shift, and go to state 30
    ID         shift, and go to state 31

    stmt        go to state 32
    block       go to state 33
    assignment  go to state 34
    location    go to state 35


State 38

   25 stmt: IF LPAREN • expression RPAREN stmt ELSE stmt

    PLUS       shift, and go to state 41
    MINUS      shift, and go to state 42
    LPAREN     shift, and go to state 43
    TRUE       shift, and go to state 44
    FALSE      shift, and go to state 45
    CONST_INT  shift, and go to state 46
    ID         shift, and go to state 47

    location        go to state 48
    expression      go to state 60
    add_expression  go to state 50
    term            go to state 51
    unary           go to state 52
    factor          go to state 53


State 39

   26 stmt: WHILE LPAREN • expression RPAREN stmt

    PLUS       shift, and go to state 41
    MINUS      shift, and go to state 42
    LPAREN     shift, and go to state 43
    TRUE       shift, and go to state 44
    FALSE      shift, and go to state 45
    CONST_INT  shift, and go to state 46
    ID         shift, and go to state 47

    location        go to state 48
    expression      go to state 61
    add_expression  go to state 50
    term            go to state 51
    unary           go to state 52
    factor          go to state 53


State 40

   27 stmt: BREAK SEMICOLON •

    $default  reduce using rule 27 (stmt)


State 41

   50 unary: PLUS • factor

    LPAREN     shift, and go to state 43
    TRUE       shift, and go to state 44
    FALSE      shift, and go to state 45
    CONST_INT  shift, and go to state 46
    ID         shift, and go to state 47

    location  go to state 48
    factor    go to state 62


State 42

   49 unary: MINUS • factor

    LPAREN     shift, and go to state 43
    TRUE       shift, and go to state 44
    FALSE      shift, and go to state 45
    CONST_INT  shift, and go to state 46
    ID         shift, and go to state 47

    location  go to state 48
    factor    go to state 63


State 43

   52 factor: LPAREN • expression RPAREN

    PLUS       shift, and go to state 41
    MINUS      shift, and go to state 42
    LPAREN     shift, and go to state 43
    TRUE       shift, and go to state 44
    FALSE      shift, and go to state 45
    CONST_INT  shift, and go to state 46
    ID         shift, and go to state 47

    location        go to state 48
    expression      go to state 64
    add_expression  go to state 50
    term            go to state 51
    unary           go to state 52
    factor          go to state 53


State 44

   55 factor: TRUE •

    $default  reduce using rule 55 (factor)


State 45

   56 factor: FALSE •

    $default  reduce using rule 56 (factor)


State 46

   54 factor: CONST_INT •

    $default  reduce using rule 54 (factor)


State 47

   32 location: ID •
   57 factor: ID • LPAREN actuals RPAREN

    LPAREN  shift, and go to state 65

    $default  reduce using rule 32 (location)


State 48

   53 factor: location •

    $default  reduce using rule 53 (factor)


State 49

   24 stmt: RETURN expression • SEMICOLON

    SEMICOLON  shift, and go to state 66


State 50

   33 expression: add_expression • relop add_expression
   34           | add_expression •
   41 add_expression: add_expression • addop term

    PLUS   shift, and go to state 67
    MINUS  shift, and go to state 68
    EQ     shift, and go to state 69
    NE     shift, and go to state 70
    GT     shift, and go to state 71
    GE     shift, and go to state 72
    LT     shift, and go to state 73
    LE     shift, and go to state 74

    $default  reduce using rule 34 (expression)

    relop  go to state 75
    addop  go to state 76


State 51

   42 add_expression: term •
   45 term: term • mulop unary

    MUL  shift, and go to state 77
    DIV  shift, and go to state 78

    $default  reduce using rule 42 (add_expression)

    mulop  go to state 79


State 52

   46 term: unary •

    $default  reduce using rule 46 (term)


State 53

   51 unary: factor •

    $default  reduce using rule 51 (unary)


State 54

   23 stmt: assignment SEMICOLON •

    $default  reduce using rule 23 (stmt)


State 55

   31 assignment: location ASSIGN • expression

    PLUS       shift, and go to state 41
    MINUS      shift, and go to state 42
    LPAREN     shift, and go to state 43
    TRUE       shift, and go to state 44
    FALSE      shift, and go to state 45
    CONST_INT  shift, and go to state 46
    ID         shift, and go to state 47

    location        go to state 48
    expression      go to state 80
    add_expression  go to state 50
    term            go to state 51
    unary           go to state 52
    factor          go to state 53


State 56

   17 decl: type ID ASSIGN • expression vars SEMICOLON

    PLUS       shift, and go to state 41
    MINUS      shift, and go to state 42
    LPAREN     shift, and go to state 43
    TRUE       shift, and go to state 44
    FALSE      shift, and go to state 45
    CONST_INT  shift, and go to state 46
    ID         shift, and go to state 47

    location        go to state 48
    expression      go to state 81
    add_expression  go to state 50
    term            go to state 51
    unary           go to state 52
    factor          go to state 53


State 57

   18 vars: COMMA • ID vars
   19     | COMMA • ID ASSIGN expression vars

    ID  shift, and go to state 82


State 58

   16 decl: type ID vars • SEMICOLON

    SEMICOLON  shift, and go to state 83


State 59

   30 block: LBRACE stmts RBRACE •

    $default  reduce using rule 30 (block)


State 60

   25 stmt: IF LPAREN expression • RPAREN stmt ELSE stmt

    RPAREN  shift, and go to state 84


State 61

   26 stmt: WHILE LPAREN expression • RPAREN stmt

    RPAREN  shift, and go to state 85


State 62

   50 unary: PLUS factor •

    $default  reduce using rule 50 (unary)


State 63

   49 unary: MINUS factor •

    $default  reduce using rule 49 (unary)


State 64

   52 factor: LPAREN expression • RPAREN

    RPAREN  shift, and go to state 86


State 65

   57 factor: ID LPAREN • actuals RPAREN

    PLUS       shift, and go to state 41
    MINUS      shift, and go to state 42
    LPAREN     shift, and go to state 43
    TRUE       shift, and go to state 44
    FALSE      shift, and go to state 45
    CONST_INT  shift, and go to state 46
    ID         shift, and go to state 47

    $default  reduce using rule 59 (actuals)

    location        go to state 48
    expression      go to state 87
    add_expression  go to state 50
    term            go to state 51
    unary           go to state 52
    factor          go to state 53
    actuals         go to state 88
    arg_list        go to state 89


State 66

   24 stmt: RETURN expression SEMICOLON •

    $default  reduce using rule 24 (stmt)


State 67

   43 addop: PLUS •

    $default  reduce using rule 43 (addop)


State 68

   44 addop: MINUS •

    $default  reduce using rule 44 (addop)


State 69

   39 relop: EQ •

    $default  reduce using rule 39 (relop)


State 70

   40 relop: NE •

    $default  reduce using rule 40 (relop)


State 71

   37 relop: GT •

    $default  reduce using rule 37 (relop)


State 72

   38 relop: GE •

    $default  reduce using rule 38 (relop)


State 73

   36 relop: LT •

    $default  reduce using rule 36 (relop)


State 74

   35 relop: LE •

    $default  reduce using rule 35 (relop)


State 75

   33 expression: add_expression relop • add_expression

    PLUS       shift, and go to state 41
    MINUS      shift, and go to state 42
    LPAREN     shift, and go to state 43
    TRUE       shift, and go to state 44
    FALSE      shift, and go to state 45
    CONST_INT  shift, and go to state 46
    ID         shift, and go to state 47

    location        go to state 48
    add_expression  go to state 90
    term            go to state 51
    unary           go to state 52
    factor          go to state 53


State 76

   41 add_expression: add_expression addop • term

    PLUS       shift, and go to state 41
    MINUS      shift, and go to state 42
    LPAREN     shift, and go to state 43
    TRUE       shift, and go to state 44
    FALSE      shift, and go to state 45
    CONST_INT  shift, and go to state 46
    ID         shift, and go to state 47

    location  go to state 48
    term      go to state 91
    unary     go to state 52
    factor    go to state 53


State 77

   47 mulop: MUL •

    $default  reduce using rule 47 (mulop)


State 78

   48 mulop: DIV •

    $default  reduce using rule 48 (mulop)


State 79

   45 term: term mulop • unary

    PLUS       shift, and go to state 41
    MINUS      shift, and go to state 42
    LPAREN     shift, and go to state 43
    TRUE       shift, and go to state 44
    FALSE      shift, and go to state 45
    CONST_INT  shift, and go to state 46
    ID         shift, and go to state 47

    location  go to state 48
    unary     go to state 92
    factor    go to state 53


State 80

   31 assignment: location ASSIGN expression •

    $default  reduce using rule 31 (assignment)


State 81

   17 decl: type ID ASSIGN expression • vars SEMICOLON

    COMMA  shift, and go to state 57

    $default  reduce using rule 20 (vars)

    vars  go to state 93


State 82

   18 vars: COMMA ID • vars
   19     | COMMA ID • ASSIGN expression vars

    ASSIGN  shift, and go to state 94
    COMMA   shift, and go to state 57

    $default  reduce using rule 20 (vars)

    vars  go to state 95


State 83

   16 decl: type ID vars SEMICOLON •

    $default  reduce using rule 16 (decl)


State 84

   25 stmt: IF LPAREN expression RPAREN • stmt ELSE stmt

    SEMICOLON  shift, and go to state 24
    LBRACE     shift, and go to state 25
    IF         shift, and go to state 27
    WHILE      shift, and go to state 28
    BREAK      shift, and go to state 29
    RETURN     shift, and go to state 30
    ID         shift, and go to state 31

    stmt        go to state 96
    block       go to state 33
    assignment  go to state 34
    location    go to state 35


State 85

   26 stmt: WHILE LPAREN expression RPAREN • stmt

    SEMICOLON  shift, and go to state 24
    LBRACE     shift, and go to state 25
    IF         shift, and go to state 27
    WHILE      shift, and go to state 28
    BREAK      shift, and go to state 29
    RETURN     shift, and go to state 30
    ID         shift, and go to state 31

    stmt        go to state 97
    block       go to state 33
    assignment  go to state 34
    location    go to state 35


State 86

   52 factor: LPAREN expression RPAREN •

    $default  reduce using rule 52 (factor)


State 87

   60 arg_list: expression •
   61         | expression • COMMA arg_list

    COMMA  shift, and go to state 98

    $default  reduce using rule 60 (arg_list)


State 88

   57 factor: ID LPAREN actuals • RPAREN

    RPAREN  shift, and go to state 99


State 89

   58 actuals: arg_list •

    $default  reduce using rule 58 (actuals)


State 90

   33 expression: add_expression relop add_expression •
   41 add_expression: add_expression • addop term

    PLUS   shift, and go to state 67
    MINUS  shift, and go to state 68

    $default  reduce using rule 33 (expression)

    addop  go to state 76


State 91

   41 add_expression: add_expression addop term •
   45 term: term • mulop unary

    MUL  shift, and go to state 77
    DIV  shift, and go to state 78

    $default  reduce using rule 41 (add_expression)

    mulop  go to state 79


State 92

   45 term: term mulop unary •

    $default  reduce using rule 45 (term)


State 93

   17 decl: type ID ASSIGN expression vars • SEMICOLON

    SEMICOLON  shift, and go to state 100


State 94

   19 vars: COMMA ID ASSIGN • expression vars

    PLUS       shift, and go to state 41
    MINUS      shift, and go to state 42
    LPAREN     shift, and go to state 43
    TRUE       shift, and go to state 44
    FALSE      shift, and go to state 45
    CONST_INT  shift, and go to state 46
    ID         shift, and go to state 47

    location        go to state 48
    expression      go to state 101
    add_expression  go to state 50
    term            go to state 51
    unary           go to state 52
    factor          go to state 53


State 95

   18 vars: COMMA ID vars •

    $default  reduce using rule 18 (vars)


State 96

   25 stmt: IF LPAREN expression RPAREN stmt • ELSE stmt

    ELSE  shift, and go to state 102


State 97

   26 stmt: WHILE LPAREN expression RPAREN stmt •

    $default  reduce using rule 26 (stmt)


State 98

   61 arg_list: expression COMMA • arg_list

    PLUS       shift, and go to state 41
    MINUS      shift, and go to state 42
    LPAREN     shift, and go to state 43
    TRUE       shift, and go to state 44
    FALSE      shift, and go to state 45
    CONST_INT  shift, and go to state 46
    ID         shift, and go to state 47

    location        go to state 48
    expression      go to state 87
    add_expression  go to state 50
    term            go to state 51
    unary           go to state 52
    factor          go to state 53
    arg_list        go to state 103


State 99

   57 factor: ID LPAREN actuals RPAREN •

    $default  reduce using rule 57 (factor)


State 100

   17 decl: type ID ASSIGN expression vars SEMICOLON •

    $default  reduce using rule 17 (decl)


State 101

   19 vars: COMMA ID ASSIGN expression • vars

    COMMA  shift, and go to state 57

    $default  reduce using rule 20 (vars)

    vars  go to state 104


State 102

   25 stmt: IF LPAREN expression RPAREN stmt ELSE • stmt

    SEMICOLON  shift, and go to state 24
    LBRACE     shift, and go to state 25
    IF         shift, and go to state 27
    WHILE      shift, and go to state 28
    BREAK      shift, and go to state 29
    RETURN     shift, and go to state 30
    ID         shift, and go to state 31

    stmt        go to state 105
    block       go to state 33
    assignment  go to state 34
    location    go to state 35


State 103

   61 arg_list: expression COMMA arg_list •

    $default  reduce using rule 61 (arg_list)


State 104

   19 vars: COMMA ID ASSIGN expression vars •

    $default  reduce using rule 19 (vars)


State 105

   25 stmt: IF LPAREN expression RPAREN stmt ELSE stmt •

    $default  reduce using rule 25 (stmt)
